--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,71 @@
 services:
+  rust: 
+    build: 
+      context: .
+      target: base
+    volumes:
+      - .:/app
+      - cargodeps:/usr/local/cargo
+
+  api1: &api
+    build: 
+      context: .
+      target: base
+    container_name: api1
+    command: cargo run --release
+    volumes:
+      - .:/app
+      - cargodeps:/usr/local/cargo
+    depends_on:
+      postgres:
+        condition: service_healthy
+    deploy:
+      resources:
+        limits:
+          cpus: '0.2'
+          memory: '50MB'
+
+  api2: 
+    <<: *api
+    container_name: api2
+
   postgres:
     image: postgres
+    container_name: postgres
     environment:
       - POSTGRES_PASSWORD=postgres
-    volumes:
-      - ./init.sql:/docker-entrypoint-initdb.d/init.sql
     ports:
       - 5432:5432
+    volumes:
+      - ./config/init.sql:/docker-entrypoint-initdb.d/init.sql
+      - ./config/postgresql.conf:/etc/postgresql/postgresql.conf
+    command: postgres -c config_file=/etc/postgresql/postgresql.conf
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
+    deploy:
+      resources:
+        limits:
+          cpus: '0.8'
+          memory: '400MB'
+
+  nginx:
+    image: nginx 
+    container_name: nginx
+    volumes:
+      - ./config/nginx.conf:/etc/nginx/nginx.conf:ro
+    ports:
+      - 9999:9999
+    depends_on:
+      - api1
+      - api2
+    deploy:
+      resources:
+        limits:
+          cpus: '0.2'
+          memory: '50MB'
+
+volumes:
+  cargodeps:
